// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Relay tests live connection 1`] = `
Object {
  "q": "query Q1 {
  viewer {
    model1 {
      edges {
        node {
          field1
          model2 {
            field2
            id
          }
          id
        }
      }
    }
    id
  }
}
",
  "subscriptionId": "1",
  "vars": undefined,
}
`;

exports[`Relay tests live connection 2`] = `
Object {
  "viewer": Object {
    "id": "Vmlld2VyOg==",
    "model1": Object {
      "edges": Array [
        Object {
          "node": Object {
            "field1": "field1Value",
            "id": "TW9kZWwyOjUw",
            "model2": Object {
              "field2": 15,
              "id": "TW9kZWwyOjEwMA==",
            },
          },
        },
      ],
    },
  },
}
`;

exports[`Relay tests live connection 3`] = `
Object {
  "viewer": Object {
    "id": "Vmlld2VyOg==",
    "model1": Object {
      "edges": Array [
        Object {
          "node": Object {
            "field1": "field1Value",
            "id": "TW9kZWwyOjUw",
            "model2": Object {
              "field2": 15,
              "id": "TW9kZWwyOjEwMA==",
            },
          },
        },
        Object {
          "node": Object {
            "field1": "field1Value2",
            "id": "TW9kZWwxOjUzMw==",
            "model2": Object {
              "field2": 18,
            },
          },
        },
      ],
    },
  },
}
`;

exports[`Relay tests live connection 4`] = `
Object {
  "viewer": Object {
    "id": "Vmlld2VyOg==",
    "model1": Object {
      "edges": Array [
        Object {
          "node": Object {
            "field1": "field1Value3",
            "id": "TW9kZWwyOjUw",
            "model2": Object {
              "field2": 19,
              "id": "TW9kZWwyOjEwMA==",
            },
          },
        },
        Object {
          "node": Object {
            "field1": "field1Value2",
            "id": "TW9kZWwxOjUzMw==",
            "model2": Object {
              "field2": 18,
            },
          },
        },
      ],
    },
  },
}
`;

exports[`Relay tests live connection 5`] = `
Object {
  "viewer": Object {
    "id": "Vmlld2VyOg==",
    "model1": Object {
      "edges": Array [
        Object {
          "node": Object {
            "field1": "field1Value2",
            "id": "TW9kZWwxOjUzMw==",
            "model2": Object {
              "field2": 18,
            },
          },
        },
      ],
    },
  },
}
`;

exports[`Relay tests live connection 6`] = `
Object {
  "q": "query Q1 {
  viewer {
    model1 {
      edges {
        node {
          field1
          model2 {
            field2
            id
          }
          id
        }
      }
    }
    id
  }
}
",
  "subscriptionId": "1",
  "vars": undefined,
}
`;

exports[`Relay tests live connection 7`] = `
Object {
  "viewer": Object {
    "id": "Vmlld2VyOg==",
    "model1": Object {
      "edges": Array [
        Object {
          "node": Object {
            "field1": "field1Value",
            "id": "TW9kZWwyOjUw",
            "model2": Object {
              "field2": 15,
              "id": "TW9kZWwyOjEwMA==",
            },
          },
        },
      ],
    },
  },
}
`;

exports[`Relay tests live node 1`] = `
Object {
  "q": "query Q1 {
  node(id: \\"\\") {
    ...F1
  }
}
fragment F1 on Model1 {
  field1
  model2 {
    field2
    id
  }
}",
  "subscriptionId": "1",
  "vars": undefined,
}
`;

exports[`Relay tests live node 2`] = `
Object {
  "node": Object {
    "field1": "field1Value",
    "id": "TW9kZWwxOjE1",
    "model2": Object {
      "field2": 15,
      "id": "TW9kZWwyOjEwMA==",
    },
  },
}
`;

exports[`Relay tests live node 3`] = `
Object {
  "node": Object {
    "field1": "field1Value4",
    "id": "TW9kZWwxOjE1",
    "model2": Object {
      "field2": 15,
      "id": "TW9kZWwyOjEwMA==",
    },
  },
}
`;
